<resources>
    <string name="app_name">InsidePacket</string>
    <string name="securely_connect_anywhere">Securely connect anywhere</string>
    <string name="all_of_your_organization_resources_in_a_click">All of your organization resources in a click</string>
    <string name="sign_in">Sign In</string>
    <string name="app_icon_image_view">app_icon_image_view</string>
    <string name="or">or</string>
    <string name="password_text_field_hint">Password</string>
    <string name="email_text_field_hint">User Name</string>
    <string name="unseen_icon">unseen_icon</string>
    <string name="google_icon">google icon</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_okta">Sign in with okta</string>
    <string name="support_map">support_map</string>
    <string name="support">Support</string>
    <string name="user_guidelines">User Guidelines</string>
    <string name="user_guidelines_steps">Read step-by-step guides that walk you through using our app</string>
    <string name="have_a_question_call_us">Have a question? Call Us</string>
    <string name="phone_number">+45456464646466</string>
    <string name="info_icon">info icon</string>
    <string name="enable_on_launch">Enable On Launch</string>
    <string name="automatic_updates">Automatic Updates</string>
    <string name="tunnel_selection">Tunnel selection</string>
    <string name="tunnel_selection_details">Choose a configuration to use on this device</string>
    <string name="macos">MacOS</string>
    <string name="iphone">iPhone</string>
    <string name="windows">Windows</string>
    <string name="version">Version</string>
    <string name="always_on_vpn">Always-On-VPN</string>
    <string name="always_on_vpn_detail_text">Automatically connects the VPN when an Internet connections is available.</string>
    <string name="automatic_wi_fi_security">Automatic Wi-Fi Security</string>
    <string name="automatically_wifi_security_steps_detail_text">Automatically connects the VPN using unsecured Wi-Fi network</string>
    <string name="trusted_wifi_networks">Trusted Wi-Fi Networks</string>
    <string name="trusted_wifi_network_detail_text">Specify Trusted Wi-Fi networks according to specific SSiDs. These Wi-Fi Networks will not trigger our Automatic Wi-fi Security</string>
    <string name="auto_wi_fi_security">Auto Wi-Fi Security</string>
    <string name="settings">Settings</string>
    <string name="security_icon">security icon</string>
    <string name="trusted_network">Trusted Network</string>
    <string name="wifi_name">Wifi Name</string>
    <string name="disconnected">DISCONNECTED</string>
    <string name="connect">connect</string>
    <string name="disconnect">disconnect</string>
    <string name="tunnel_ip">Tunnel IP:</string>
    <string name="public_ip">Public IP:</string>
    <string name="gateway">Gateway:</string>
    <string name="traffic_in_out">Traffic in/out:</string>
    <string name="read_step_by_step">Read step-by-step guides that walk you through using our app</string>
    <string name="live_chat">Live Chat</string>
    <string name="send_crash_reports">Send crash reports</string>
    <string name="send_logs_to_support">Send logs to support</string>
    <string name="menu_home">Home</string>
    <string name="menu_support">Support</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="exit">Exit</string>
    <string name="set_as_trusted">set as trusted</string>
    <string name="no_tunnels_available">No Tunnels Available</string>
    <string name="no_wifi_available">No Wifi Available</string>
    <string name="access_organization_resources">Access Organization\nResources</string>
    <string name="not_trusted_cloud_image">not_trusted_cloud_image</string>
    <string name="time_left">Time left:</string>
    <string name="start_to_chat_description">Start to chat with an insidepacket expert about any and all needs</string>
    <string name="reset_agent">Reset agent</string>
    <string name="confirm_password_text_field_hint">Confirm Password</string>
</resources>