<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#F5F5F5"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/upper_layout"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/support_upper_layer_background">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp"
            android:contentDescription="@string/app_icon_image_view"
            android:src="@drawable/app_icon" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/settings"
            android:src="@drawable/map" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/security_icon"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/upper_layout"
        android:contentDescription="@string/security_icon"
        android:src="@drawable/security_icon" />

    <RelativeLayout
        android:id="@+id/network_wifi_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/security_icon">

        <RelativeLayout
            android:id="@+id/connected_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <ImageView
                android:id="@+id/connected_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/settings"
                android:src="@drawable/connected_icon" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/connected_icon">

                <TextView
                    android:id="@+id/trusted_network_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/trusted_network"
                    android:textAlignment="center"
                    android:textColor="#0D0038"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/wifi_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/trusted_network_text"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/wifi_name"
                    android:textAlignment="center"
                    android:textColor="#12B204"
                    android:textSize="12sp" />

            </RelativeLayout>

        </RelativeLayout>

        <ImageView
            android:id="@+id/disconnected_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/settings"
            android:src="@drawable/disconnected_icon" />

    </RelativeLayout>

    <TextView
        android:id="@+id/network_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/network_wifi_status"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/disconnected"
        android:textAlignment="center"
        android:textColor="#E82424"
        android:textSize="35sp" />

    <RelativeLayout
        android:id="@+id/network_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/wifi_status_layout"
        android:layout_below="@+id/network_status">

        <Button
            android:id="@+id/connected_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="45dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/connect"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="gone"
            app:backgroundTint="#12B204"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/disconnected_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="45dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/disconnect"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="#6B55F0"
            app:cornerRadius="10dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/wifi_status_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:weightSum="4"
        android:baselineAligned="false">

        <RelativeLayout
            android:id="@+id/traffic_in_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/traffic_in_out_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/traffic_in_out"
                android:textAlignment="center"
                android:textColor="#78A3D4"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/traffic_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/traffic_in_out_text"
                android:fontFamily="@font/montserrat_medium"
                android:text="12/2 mbps"
                android:textAlignment="center"
                android:textColor="#6B55F0"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/gateway"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/gateway_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/gateway"
                android:textAlignment="center"
                android:textColor="#78A3D4"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/gateway_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gateway_text"
                android:fontFamily="@font/montserrat_medium"
                android:text="12/2 mbps"
                android:textAlignment="center"
                android:textColor="#6B55F0"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/public_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/public_ip_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/public_ip"
                android:textAlignment="center"
                android:textColor="#78A3D4"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/public_ip_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/public_ip_text"
                android:fontFamily="@font/montserrat_medium"
                android:text="12/2 mbps"
                android:textAlignment="center"
                android:textColor="#6B55F0"
                android:textSize="14sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tunnel_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tunnel_ip_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/tunnel_ip"
                android:textAlignment="center"
                android:textColor="#78A3D4"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tunnel_ip_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tunnel_ip_text"
                android:fontFamily="@font/montserrat_medium"
                android:text="12/2 mbps"
                android:textAlignment="center"
                android:textColor="#6B55F0"
                android:textSize="14sp" />

        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>