<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60.0dp"
                android:contentDescription="@string/app_icon_image_view"
                android:src="@drawable/app_icon" />

            <TextView
                android:id="@+id/securely_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="70dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/securely_connect_anywhere"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/all_resources_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/securely_text"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="13dp"
                android:layout_marginRight="70dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/all_of_your_organization_resources_in_a_click"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <ImageView
                android:id="@+id/person_gif"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_below="@+id/all_resources_text"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/sign_in_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"
                android:layout_marginBottom="65dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:backgroundTint="#6B55F0"
                app:cornerRadius="10dp" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>