<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5BEBE7F9"
    tools:context=".activities.SupportActivity">

    <RelativeLayout
        android:id="@+id/upper_layout"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/support_upper_layer_background">

        <TextView
            android:id="@+id/support_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/settings"
            android:src="@drawable/map" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/upper_layout"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#5BEBE7F9">

            <RelativeLayout
                android:id="@+id/always_on_vpn_switch_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/always_on_vpn_inner_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp">

                    <RelativeLayout
                        android:id="@+id/always_on_vpn_inner_switch_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/automatic_updates_switch">

                        <TextView
                            android:id="@+id/always_on_vpn_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_semi_bold"
                            android:text="@string/always_on_vpn"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/always_on_vpn_steps_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/always_on_vpn_text"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/montserrat_medium"
                            android:text="@string/always_on_vpn_detail_text"
                            android:textSize="14sp" />

                    </RelativeLayout>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/automatic_updates_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_below="@+id/always_on_vpn_inner_switch_layout"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="20dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_below="@+id/always_on_vpn_inner_layout"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="#CCC4E8" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/automatic_wifi_security_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/always_on_vpn_switch_layout"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <RelativeLayout
                    android:id="@+id/automatic_wifi_security_inner_switch_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/automatic_wifi_security_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:text="@string/automatic_wi_fi_security"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/automatic_wifi_security_steps_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/automatic_wifi_security_text"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/automatically_wifi_security_steps_detail_text"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_below="@+id/automatic_wifi_security_inner_switch_layout"
                    android:layout_marginTop="20dp"
                    android:background="#CCC4E8" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/trusted_wifi_networks_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/automatic_wifi_security_layout"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp">

                <RelativeLayout
                    android:id="@+id/trusted_wifi_networks_inner_switch_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/trusted_wifi_networks_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:text="@string/trusted_wifi_networks"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/trusted_wifi_networks_steps_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/trusted_wifi_networks_text"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/trusted_wifi_network_detail_text"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/auto_wifi_security_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_below="@+id/trusted_wifi_networks_steps_text"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:text="@string/auto_wi_fi_security"
                        android:textColor="#6B55F0"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_below="@+id/trusted_wifi_networks_inner_switch_layout"
                    android:layout_marginTop="20dp"
                    android:background="#CCC4E8" />

            </RelativeLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>